--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,8 +37,12 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
     implementation 'com.google.firebase:firebase-analytics'
-    implementation platform('com.google.firebase:firebase-bom:28.4.1')
     implementation 'com.google.firebase:firebase-auth'
+    // Import the BoM for the Firebase platform
+    // Declare the dependency for the Cloud Firestore library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-firestore:24.0.0'
 }
+
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
