--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication06">
         <activity
-            android:name=".SignUpActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".LoginActivity">
+        </activity>
+        <activity
+            android:name=".SignUpActivity">
+        </activity>
+        <activity
+            android:name=".PasswordResetActivity">
+        </activity>
+        <activity
+            android:name=".MemberInitActivity">
         </activity>
     </application>
 
